--- a/src/app/characters-slytherin/characters-slytherin.component.scss
+++ b/src/app/characters-slytherin/characters-slytherin.component.scss
@@ -1,7 +1,7 @@
 $font-family1: 'Fira Mono', monospace;
-$colorYellow: rgb(7, 7, 7);
+$colorYellow: rgb(255, 205, 112);
 $font-family2:'Cantarell', sans-serif;
-$colorBackround: rgb(247, 244, 240);
+$colorBackround: rgb(28, 51, 34);
 
 .patronus::first-letter{
   text-transform: uppercase;
@@ -11,14 +11,10 @@ $colorBackround: rgb(247, 244, 240);
 }
 
 
-.flip-card-front > img {
-  border: 1px solid black;
-}
-
 body
 {
-margin: 0;
-padding: 0;
+background-color: $colorBackround;
+height : 2000px;
 
 }
 
@@ -28,17 +24,11 @@ div
 
 }
 
-
-
-
-
-
 /* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
 .flip-card {
   background-color: transparent;
-  width: 100%;
-
-
+  width: 100% max-content;
+  height: 300px;
 
   // perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
@@ -56,8 +46,6 @@ div
 /* Do an horizontal flip when you move the mouse over the flip box container */
 .flip-card .flip-card-inner:hover {
   transform: rotateY(180deg);
-  cursor: pointer;
-
 }
 
 /* Position the front and back side */
@@ -71,25 +59,16 @@ div
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #bbb;
+  background-color: rgb(255, 255, 255);
   color: black;
-  box-shadow: 4px 3px 3px grey;
-
-
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-color: rgb(236, 197, 138);
+  background-color: $colorYellow;
   color: black;
   transform: rotateY(180deg);
-  border: 1px solid black;
-  box-shadow: 4px 3px 3px grey;
-
-
-
 }
-
 
 
 
@@ -114,10 +93,6 @@ div
 // .card-body{
 //   opacity: 2rem;
 // }
-
-.flip-card-back > h1{
-  color: black;
-}
 h1 {
 
   margin: 2rem;
