--- a/src/app/characters-slytherin/characters-slytherin.component.html
+++ b/src/app/characters-slytherin/characters-slytherin.component.html
@@ -1,4 +1,3 @@
-
 <html>
 
 <header>
@@ -10,7 +9,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Cantarell&family=Fira+Mono:wght@500&display=swap" rel="stylesheet">
 </header>
 
+
+
 <body>
+
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,19 +40,21 @@
     </div>
   </nav>
 
-
-
   <div class="intro d-flex flex-column">
-    <img src="assets/houses.jpg" class="img-fluid mx-auto" style="width:43rem; height: 25rem" >
+    <img src="assets/slytherin.jpg" class="img-fluid mx-auto" style="width:43rem; height: 25rem" >
       <h1 class=text-center>Harry Potter</h1>
+
+      <h2 class="title-character text-center">Characters</h2>
   </div>
 
-  <h2 class="title-character text-center">Characters</h2>
+  <br>
+
+
 
   <div class="flip-card d-flex flex-row flex-wrap justify-content-around w-100">
-    <div class="flip-card-inner" *ngFor="let character of characters" style="width: 20rem; height: 22rem;">
-      <div class="flip-card-front">
-        <img style="width: 100%; height:22rem" src="{{character.image}}" alt="Avatar">
+    <div class="flip-card-inner" *ngFor="let character of characterSlytherin" style="width: 20rem; height: 22rem;">
+      <div class="flip-card-front ">
+        <img class="avatar" style="width: 100%; height:22rem" src="{{character.image}}" alt="Avatar">
       </div>
       <div class="flip-card-back">
         <h1 class="name"> {{character.name}}</h1>
@@ -62,21 +66,7 @@
   </div>
 
 
-<!--
-  <div class="card-container d-flex flex-row flex-wrap justify-content-around w-100">
-
-    <div class="card" *ngFor="let character of characters" style="width: 20rem; height: 22rem;" >
-      <img class="card-img-top" style="width: 100%; height:22rem" src="{{character.image}}" alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text">Name : {{character.name}}</p>
-        <p class="card-text" *ngIf="character.house">House : {{character.house}}</p>
-        <p class="card-text">Actor : {{character.actor}}</p>
-        <div class="d-flex flex-row"  *ngIf="character.patronus">Patronus : <p class="patronus pl-2">{{character.patronus}}</p></div>
-      </div>
-    </div>
-
-  </div> -->
-
 </body>
+
 
 </html>
