--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,8 @@
 
 /* Importing Datepicker SCSS file. */
 @import "~ngx-bootstrap/datepicker/bs-datepicker";
+
+body{
+  // background-color: rgb(10, 10, 27);
+  overscroll-behavior: none;
+}
