--- a/src/app/characters-gryffindor/characters-gryffindor.component.html
+++ b/src/app/characters-gryffindor/characters-gryffindor.component.html
@@ -24,16 +24,16 @@
 
 
 
-  <div class="card-container d-flex flex-row flex-wrap justify-content-around mb-2 ">
-    <div class="card" *ngFor="let gryffindor of characterGryffindor" style="width: 20rem">
-      <img class="card-img-top" style="width: 100%" src="{{gryffindor.image}}" alt="Card image cap">
-      <div class="card-body">
-        <p class="card-text">Name : {{gryffindor.name}}</p>
-        <p class="card-text" *ngIf="gryffindor.house">House : {{gryffindor.house}}</p>
-        <p class="card-text">Actor : {{gryffindor.actor}}</p>
-        <p class="card-text">Wand : {{gryffindor.wand}}</p>
-        <div class="d-flex flex-row"  *ngIf="gryffindor.patronus">Patronus : <p class="patronus pl-2">{{gryffindor.patronus}}</p></div>
-
+  <div class="flip-card d-flex flex-row flex-wrap justify-content-around w-100">
+    <div class="flip-card-inner" *ngFor="let gryffindor of characterGryffindor | slice:0:5 " style="width: 20rem; height: 22rem;">
+      <div class="flip-card-front">
+        <img style="width: 100%; height:22rem" src="{{gryffindor.image}}" alt="Avatar">
+      </div>
+      <div class="flip-card-back">
+        <h1 class="name"> {{gryffindor.name}}</h1>
+        <p>Actor : {{gryffindor.actor}}</p>
+        <p *ngIf="gryffindor.yearOfBirth">Birth : {{gryffindor.yearOfBirth}}</p>
+        <!-- <div class="patronustitre text-center d-flex flex-row"  *ngIf="character.patronus">Patronus : <p class="patronus pl-2">{{character.patronus}}</p></div> -->
       </div>
     </div>
   </div>
